<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_amber_500"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PortfolioActivity">

    <TextView
        android:id="@+id/main_menu_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_menu_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_menu_header"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/spotify_button"
            style="@style/Button"
            android:text="@string/spotify_title" />

        <Button
            android:id="@+id/scores_button"
            style="@style/Button"
            android:text="@string/scores_title" />

        <Button
            android:id="@+id/library_button"
            style="@style/Button"
            android:text="@string/library_title" />

        <Button
            android:id="@+id/build_it_button"
            style="@style/Button"
            android:text="@string/build_it_title" />

        <Button
            android:id="@+id/xyz_reader_button"
            style="@style/Button"
            android:text="@string/xyz_reader_title" />

        <Button
            android:id="@+id/capstone_button"
            style="@style/Button.Red"
            android:text="@string/capstone_title" />
    </LinearLayout>

</RelativeLayout>
